# hpx_example

./: CMakeLists.txt  heranca.cpp  heranca.hpp  prog.cpp
